Fixed message for display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -284,16 +284,16 @@ footer h2 {
 
   .message #running-watts {
     font-size: 75%;
-    margin-left: 20%;
+    margin-left: 19%;
   }
   .message #starting-watts {
     font-size: 75%;
-    margin-left: 25%;
+    margin-left: 22%;
 
   }
   .message #total-watts {
     font-size: 75%;
-    margin-left: 27%;
+    margin-left: 25%;
 
   }
 
